# server-check

./: CMakeLists.txt  README.md  check-servers.c  findsym.c  interrupt.c  test.c
tmp/: readme.txt
tmp/test/: servercheck_link
